--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,8 @@ body {
 }
 
 #price-container {
-    margin-left: 20%;
+    margin-left: 10%;
+    margin-right: 10%;
     background:#353535;
     padding: 0 10px;
     text-align:center;
