--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
 #price-container {
     margin-left: 10%;
     margin-right: 10%;
+    width: 200px;
     background:#353535;
     padding: 0 10px;
     text-align:center;
@@ -31,6 +32,7 @@ body {
 .subtext {
     font-size:.8em;
     text-transform:uppercase;
+    margin-right: auto;
     margin-bottom: 10px;
 }
 img {
