--- a/src/index.css
+++ b/src/index.css
@@ -12,31 +12,35 @@ body {
     width:100%;
     margin-top:50px;
     background:#1A1A1A;
+    border-top: 3px solid #FF0057; 
     border-bottom: 3px solid #FF0057;
     display: grid;
-    grid-template-columns: 35% auto 35%;
+    grid-template-columns: 90px 100px auto;
     align-items: center;
 }
 
 #price-container {
     margin-left: 10%;
     margin-right: 10%;
+    height:100px;
     width: 150px;
     background:#353535;
     padding: 0 10px;
     text-align:center;
 }
 #goal-container {
-    padding:20px;
+    padding: 20px;
 }
 .subtext {
-    font-size:.8em;
+    font-size: .8em;
     text-transform:uppercase;
     margin-right: auto;
     margin-bottom: 10px;
 }
 img {
-    width: 20px;
+    width: 100px;
+    height:100px;
+    background:#FF0057;
 }
 
 h1 {
