--- a/src/index.css
+++ b/src/index.css
@@ -51,9 +51,48 @@ button {
     float:right;
     background:#FF0057;
     border:none;
-    color:#fff;
+    color:##1A1A1A;
     text-transform:uppercase;
     padding:10px;
     margin-right: 30px;
     cursor:pointer;
 }
+
+.dropbtn {
+    background-color: #FF0057;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #FF0057;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: static;
+    background-color: #1A1A1A;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown a:hover {background-color: #ddd;}
+  
+  .show {display: block;}
